--- a/SFMLTest/SFMLTest.vcxproj.filters
+++ b/SFMLTest/SFMLTest.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="GameObjectManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameBall.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameObjectManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameBall.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
